* Due to the previous changes, the database format is now at version 2.
* Torsten Bronger's calibration tutorial, his webserver code for receiving calibration images, and his calibration script are now part of Lensfun's source code.

New interchangeable lenses:

* Beroflex 1:8 500mm
* Canon EF 8-15mm f/4L Fisheye USM
* Canon EF 14mm f/2.8L II USM
* Canon EF 20mm f/2.8 USM
* Canon EF 35mm f/1.4L USM
* Canon EF 40mm f/2.8 STM
* Canon EF 50mm f/1.8 II
* Canon EF 85mm f/1.2L II USM
* Canon EF 90-300mm f/4.5-5.6
* Canon EF 100mm f/2.8 Macro USM
* Fujifilm XF 14mm f/2.8 R
* Fujifilm XF 16mm f/1.4 R WR
* Fujifilm XF 35mm f/2 R WR
* Fujifilm XF 56mm f/1.2 R APD
* Nikkor AF-S DX 16-80mm f/2.8-4E ED VR
* Nikkor AF-S DX 18-300mm f/3.5-5.6G ED VR
* Pentax-DA L 18-50mm F4-5.6 DC WR RE
* Pentax-DA 40mm f/2.8 XS
* Pentax-DA L 50-200mm f/4-5.6 ED WR
* Pentax-M Macro 1:4 100mm
* Samsung NX 10mm f/3.5 Fisheye
* Sigma 4.5mm f/2.8 EX DC HSM circular fisheye
* Sony FE 28mm f/2 + Sony SEL075 UWC
* Sony AF DT 30mm f/2.8 SAM Macro
* Sony FE 90mm f/2.8 Macro G OSS
* Tamron SP 70-200mm f/2.8 Di VC USD A009
* Tamron AF 80-210mm f/4.5-5.6 280D
* Zeiss Batis 25mm f/2
* Zeiss Distagon T* 25mm f/2.8 ZF.2

New compact, smartphone, and action cameras:

* AEE SD19
* GoPro Hero3+ black
* Olympus XZ-2
* Olympus Stylus TG-1, TG-2, TG-3, TG-4
* Sony Xperia Z3
* Sony RX10 II

New interchangable lens cameras:

* Canon EOS 80D
* Canon EOS 1300D
* Nikon D4s
* Pentax K-1

Additional/updated data for:

* Canon EF-S 10-22mm f/3.5-4.6 USM
* Canon EF 16-35mm f/2.8L USM
* Canon EF-S 17-55mm f/2.8 IS USM
* Canon EF-S 18-55mm f/3.5-5.6 IS
* Canon EF 24-105mm f/4L IS USM
* Canon EF 50mm f/1.4 USM
* Canon EF 70-300mm f/4.5-5.6 DO IS USM
* Canon EF 100-400mm f/4.5-5.6L IS USM
* Canon EF 24-70mm f/4L IS USM
* Fujifilm XF 23mm f/1.4 R
* Fujifilm XF 27mm f/2.8
* Fujifilm XF 35mm f/1.4 R
* Fujifilm XF 60mm f/2.4 R Macro
* Fujifilm XF 18-55mm f/2.8-4 R LM OIS
* Fujifilm XF 55-200mm f/3.5-4.8 R LM OIS